--- a/lib/components/fo_multi_input/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input/fo_multi_input_component.html
@@ -1,6 +1,7 @@
 <div class="flex-container">
     <material-input [label]="label"
                     floatingLabel
+                    [maxCount]="maxCount"
                     [leadingText]="leadingText"
                     [disabled]="disabled"
                     [displayBottomPanel]="false"
