--- a/lib/components/fo_carousel/fo_carousel_component.html
+++ b/lib/components/fo_carousel/fo_carousel_component.html
@@ -1,30 +1,28 @@
-<div class="row expand collapse">
-    <div class="s12 col">
-        <div id="slide-container">
-            <div id="slide-transformer"
-                 [style.transform]="transform">
-                <ng-content></ng-content>
-            </div>
+<div>
+    <div id="slide-container">
+        <div id="slide-transformer"
+             [style.transform]="transform">
+            <ng-content></ng-content>
+        </div>
 
-            <div class="arrow"
-                 [class.faded]="step <= 0"
-                 id="arrow-left">
-                <material-button raised
-                                 clear-size
-                                 (click)="stepBy(-1)">
-                    <material-icon icon="keyboard_arrow_left"></material-icon>
-                </material-button>
-            </div>
-            <div class="arrow"
-                 [class.faded]="step >= slides.length - 1"
-                 id="arrow-right">
-                <material-button raised
-                                 clear-size
-                                 (click)="stepBy(1)">
-                    <material-icon class="clickable"
-                                   icon="keyboard_arrow_right"></material-icon>
-                </material-button>
-            </div>
+        <div class="arrow"
+             [class.faded]="step <= 0"
+             id="arrow-left"> 
+            <material-button raised
+                             clear-size
+                             (click)="stepBy(-1)">
+                <material-icon icon="keyboard_arrow_left"></material-icon>
+            </material-button>
+        </div>
+        <div class="arrow"
+             [class.faded]="step >= slides.length - 1"
+             id="arrow-right">
+            <material-button raised
+                             clear-size
+                             (click)="stepBy(1)">
+                <material-icon class="clickable"
+                               icon="keyboard_arrow_right"></material-icon>
+            </material-button>
         </div>
     </div>
 </div>
