removed namepipe from FoSelect option

--- a/lib/components/fo_select/fo_select_component.html
+++ b/lib/components/fo_select/fo_select_component.html
@@ -41,7 +41,7 @@
                                size="large"></material-icon>
                 <span>&nbsp;</span>
             </span>
-            <span>{{option.toString() | name}}</span>
+            <span>{{option.toString()}}</span>
         </material-select-dropdown-item>
     </material-dropdown-select>
 
