Added changedetection.OnPush to a bunch of components

--- a/lib/components/fo_multi_input/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input/fo_multi_input_component.html
@@ -4,7 +4,7 @@
                     [maxCount]="maxCount"
                     [leadingText]="leadingText"
                     [disabled]="disabled"
-                    [displayBottomPanel]="false"
+                    [displayBottomPanel]="true"
                     (keyup)="onKeyUp($event)"
                     [(ngModel)]="inputValue">
     </material-input>
