--- a/lib/components/fo_tab/fo_tab_panel_component.html
+++ b/lib/components/fo_tab/fo_tab_panel_component.html
@@ -5,7 +5,7 @@
          [style.background-color]="backgroundColor(tab)"
          (click)="onTabClick(tab)">
          <h1 *ngIf="tab.icon != null" class="margin-top-small margin-bottom-small">
-             <fo-icon icon="tab.icon"></fo-icon>
+             <fo-icon [icon]="tab.icon"></fo-icon>
          </h1>
          <p class="margin-top-none margin-bottom-none">
              {{tab.label}}
