--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -31,5 +31,5 @@
            (change)="onFileChange($event)"
            accept="image/jpg,image/jpeg,image/png,image/gif" />
     <p *ngIf="invalidFile"
-       class="error-output background-color-alert-light">{{msg.invalid_file()}}</p>
+       class="error-output">{{msg.invalid_file()}}</p>
 </div>
