FoLogin now has white background header

--- a/lib/components/fo_login/fo_login_component.scss
+++ b/lib/components/fo_login/fo_login_component.scss
@@ -1,3 +1,6 @@
+@import 'package:fo_components/mixins';
+@include fo-colors(white, black, blue);
+
 div.padder {
     padding: 0 1rem;
     div.login-container {
