Fixed issue with login component header background

--- a/lib/components/fo_login/fo_login_component.scss
+++ b/lib/components/fo_login/fo_login_component.scss
@@ -1,7 +1,23 @@
 @import 'package:fo_components/mixins';
-@include fo-colors(white, black, blue);
+@import 'package:angular_components/material_dialog/mixins';
 
-div.padder {
+::ng-deep material-dialog.themeable {
+    @include material-dialog-header-color(white !important);
+    div.wrapper>header {
+        div.flexContainer {
+            h3.themeable {
+                color: $foColorPrimary !important;
+            }
+            div#closeButtonContainer {
+                material-button.themeable {
+                    color: $foColorPrimary !important;
+                }
+            }
+        }
+    }
+}
+
+div.padder {    
     padding: 0 1rem;
     div.login-container {
         max-width: 100%;
