Added FoModal whiteHeader when image is set

--- a/lib/components/fo_modal/fo_modal_component.html
+++ b/lib/components/fo_modal/fo_modal_component.html
@@ -1,5 +1,5 @@
 <modal [visible]="visible">
-    <material-dialog headered class="themeable" [class.fixed-height]="fixedHeight" [class.fixed-width]="fixedWidth" [class.small-padding]="smallPadding"
+    <material-dialog headered class="themeable" [class.white-header]="titleImageUrl != null" [class.fixed-height]="fixedHeight" [class.fixed-width]="fixedWidth" [class.small-padding]="smallPadding"
                      [error]="error">
         <div header>
             <div class="flexContainer">
