--- a/lib/components/fo_notification/fo_notification_component.scss
+++ b/lib/components/fo_notification/fo_notification_component.scss
@@ -1,5 +1,5 @@
-@import 'package:grid/grid';
-@import '../../mixins';
+//@import 'package:grid/grid';
+@import '../../colors';
 
 :host {
     z-index: 99;
