Adjusted foSelect label fontsize

--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -1,6 +1,7 @@
 @import 'package:grid/grid';
 @import '../../colors.scss';
 :host {
+    display: block;
     width: 100%;
     color: #555;
     .display-inline-block {
