--- a/lib/components/fo_select/fo_select_component.scss
+++ b/lib/components/fo_select/fo_select_component.scss
@@ -5,10 +5,11 @@
         width: 100%;
         display: inline-block;
         white-space: nowrap;
-        font-size: 0.75em;
+        font-size: 12px;        
         color: #888;
         margin-top: 5px;
         margin-bottom: 5px;
+        height: 15px;
     }
     label.dark-theme {
         color: white;        
