Notification now text-left

--- a/lib/components/fo_notification/fo_notification_component.html
+++ b/lib/components/fo_notification/fo_notification_component.html
@@ -3,7 +3,7 @@
     <div class="col">
         <div id="notificationContainer">
             <div class="row">
-                <div class="l11 m10 s9 col">
+                <div class="l11 m10 s9 col text-left">
                     <h3 class="overflowEllipsis margin-top-medium margin-bottom-none">
                         {{header}}
                     </h3>
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col text-left">
                     <ng-content></ng-content>
                 </div>
             </div>
