--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -13,7 +13,7 @@
     <span class="clickable"
           [class.disabled]="disabled"
           id="valueOutput"
-          (click)="popupVisible = !disabled"
+          (click)="openPopup()"
           popupSource
           #source="popupSource">{{formattedValue}}</span>
     <material-button clear-size
@@ -27,12 +27,12 @@
     </material-button>
     <span>&nbsp;{{trailingText}}</span>
 </div>
-
 <material-popup [(visible)]="popupVisible"
                 [source]="source">
-    <div class="row padding-top-small">
+    <div class="row padding-top-small" *ngIf="popupVisible">
         <div class="col">
-            <material-input type="number"
+            <material-input autoFocus
+                            type="number"
                             [ngFormControl]="numberInputControl"
                             [label]="msg.enter_value() | name"
                             [disabled]="disabled"
