Hide tab label for small screen

--- a/lib/components/fo_tab/fo_tab_panel_component.html
+++ b/lib/components/fo_tab/fo_tab_panel_component.html
@@ -7,7 +7,7 @@
          <h1 *ngIf="tab.icon != null" class="margin-top-small margin-bottom-small">
              <fo-icon [icon]="tab.icon"></fo-icon>
          </h1>
-         <p class="margin-top-none margin-bottom-none">
+         <p class="margin-top-none margin-bottom-none hide-for-small">
              {{tab.label}}
          </p>
     </div>
