--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -1,34 +1,30 @@
-label
-{
-    display: block;
-    font-size: 0.75em;
-    color: #888;
-    margin-bottom: 0.3rem;
-}
-
-span
-{
-    color: #666;
-    white-space: nowrap;
-}
-span#valueOutput
-{
-    display: inline-block;
-    min-width: 2rem;
-    text-align: center;
-    margin: 0 0.2rem;
-    transform: translateY(-0.2rem);
-    
-}
-span#valueOutput.disabled {
-    color: #aaa;
-    
-}
-
-material-button
-{
-    
-    -webkit-user-select: none;
-    -moz-user-select: none;-ms-user-select: none;
-    user-select: none;
+:host {
+    outline: none;
+    label {
+        display: block;
+        font-size: 0.75em;
+        color: #888;
+        margin-bottom: 0.3rem;
+    }
+    span {
+        color: #666;
+        white-space: nowrap;
+    }
+    span#valueOutput {
+        outline: none;
+        display: inline-block;
+        min-width: 2rem;
+        text-align: center;
+        margin: 0 0.2rem;
+        transform: translateY(-0.2rem);
+    }
+    span#valueOutput.disabled {
+        color: #aaa;
+    }
+    material-button {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
 }
