--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -42,6 +42,7 @@
         <div class="col">
             <material-input [label]="msg.enter_value() | name"
                             floatingLabel
+                            inputmode="numeric"
                             type="tel"
                             pattern="[-]?\d*"
                             autoFocus
