FoModal close button now has right margin

--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -33,6 +33,7 @@ material-dialog {
                 flex: auto;
                 align-self: flex-start;
                 text-align: right;
+                margin-left: 0.5rem;
                 material-button {
                     color: $foColorSecondary;
                 }
