--- a/lib/components/fo_multi_select/fo_multi_select_component.html
+++ b/lib/components/fo_multi_select/fo_multi_select_component.html
@@ -5,36 +5,25 @@
                           [popupMatchInputWidth]="false"
                           [(visible)]="visible"
                           id="select">
-    <div *ngIf="showSearch"
-         header>
-        <material-select-searchbox [label]="msg.search()"
-                                   [filterable]="selectionOptions">
-        </material-select-searchbox>
-    </div>
-    <material-select-dropdown-item *ngFor="let option of selectionOptions.optionsList"
-                                   class="text-left"
-                                   (click)="onToggle(option.id, !selectedIds.contains(option.id))">
-        <material-checkbox label="{{option.toString()}}"
-                           [checked]="selectedIds.contains(option.id)"
-                           (click)="onToggle(option.id, !selectedIds.contains(option.id)); $event.stopPropagation();">
-        </material-checkbox>
-    </material-select-dropdown-item>
+  <div *ngIf="showSearch"
+       header>
+    <material-select-searchbox [label]="msg.search()"
+                               [filterable]="filterOptions">
+    </material-select-searchbox>
+  </div>
+  <material-select-dropdown-item *ngFor="let option of selectionOptions.optionsList"
+                                 class="text-left"
+                                 (click)="onToggle(option.id, !selectedIds.contains(option.id))">
+    <material-checkbox label="{{option.toString()}}"
+                       [checked]="selectedIds.contains(option.id)"
+                       (click)="onToggle(option.id, !selectedIds.contains(option.id)); $event.stopPropagation();">
+    </material-checkbox>
+  </material-select-dropdown-item>
 </material-dropdown-select>
-
-<material-chips *ngIf="allowReorder"
-                class="selectedValues">    
-    <material-chip *ngFor="let id of selectedIds"
-                    (remove)="onToggle(id, false)"
-                    reorderItem>
-        {{getModel(id)?.toString()}}
-    </material-chip>    
-</material-chips>
-<material-chips *ngIf="!allowReorder"
-                class="selectedValues">
-    <material-chip *ngFor="let id of selectedIds"
-                   (remove)="onToggle(id, false)">
-        {{getModel(id)?.toString()}}
-    </material-chip>
+<material-chips class="selectedValues">
+  <material-chip *ngFor="let id of selectedIds"
+                 (remove)="onToggle(id, false)"
+                 reorderItem> {{getModel(id)?.toString()}} </material-chip>
 </material-chips>
 <div *ngIf="!selectionOptions.isNotEmpty"
      class="selectedValues">{{nullSelectionButtonText}}</div>
