Fixed issue with foSelect search

--- a/lib/components/fo_multi_select/fo_multi_select_component.html
+++ b/lib/components/fo_multi_select/fo_multi_select_component.html
@@ -8,7 +8,7 @@
   <div *ngIf="showSearch"
        header>
     <material-select-searchbox [label]="msg.search()"
-                               [filterable]="filterOptions">
+                               [filterable]="selectionOptions">
     </material-select-searchbox>
   </div>
   <material-select-dropdown-item *ngFor="let option of selectionOptions.optionsList"
